Adding in battleparams for the swagger
