# app/src/main/webapp/swagger/battle/v1/tank-battle.json
@@ -73,6 +73,15 @@
         "operationId" : "simulateBattle",
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "The parameters of the battle",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/BattleParams"
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "successful operation",
@@ -108,6 +117,20 @@
     }
   },
   "definitions" : {
+    "BattleParams" : {
+      "type" : "object",
+      "properties" : {
+        "tankIds" : {
+          "type" : "array",
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "mapId" : {
+          "type" : "string"
+        }
+      }
+    },
     "Map" : {
       "type" : "object",
       "properties" : {
